<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0"
         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>
    <parent>
          <groupId>learning-jdk</groupId>
          <artifactId>learning-jdk9-11</artifactId>
          <version>1.0-SNAPSHOT</version>
    </parent>

    <groupId>learning-jdk</groupId>
    <artifactId>other-features</artifactId>
    <version>1.0-SNAPSHOT</version>

    <properties>
    <!--maven.compiler.release 的优先级高于 source/target，一旦设置了 release，source/target 会被完全忽略。-->
        <maven.compiler.source>11</maven.compiler.source>
        <maven.compiler.target>11</maven.compiler.target>
        <maven.compiler.release>11</maven.compiler.release>
    </properties>

    <dependencies>
        <dependency>
            <groupId>org.projectlombok</groupId>
            <artifactId>lombok</artifactId>
            <scope>provided</scope>
        </dependency>
    </dependencies>

    <build>
        <plugins>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-compiler-plugin</artifactId>
                <version>3.11.0</version>
                <!--
                JDK 23+ 的 javac 默认不再自动发现 classpath 上的注解处理器（隐式注解处理被禁用），
                必须通过 annotationProcessorPaths 显式指定。这是现代 JDK 的已知行为变更。
                -->
                <configuration>
                    <annotationProcessorPaths>
                        <path>
                            <groupId>org.projectlombok</groupId>
                            <artifactId>lombok</artifactId>
                            <version>${lombok.version}</version>
                        </path>
                    </annotationProcessorPaths>
                </configuration>
            </plugin>
        </plugins>
    </build>

</project>